--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: black !important;
 }
 
 .card-small {
